# spectralizer

./: .gitignore  CMakeLists.txt  README.md  build.sh  start.bat
src/: main.c
